--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "wesh"
   ],
   "author": "AutoCoderr",
-  "license": "GPL-3.0",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/AutoCoderr/PHjs/issues"
   },
